@@ -1,0 +1,6 @@
+[nosetests]
+nocapture=1
+cover-package=repoze.profile
+with-coverage=1
+cover-erase=1
+
